fix: vertical inner alignment on #input

--- a/packages/dnb-ui-lib/src/components/input/style/_input.scss
+++ b/packages/dnb-ui-lib/src/components/input/style/_input.scss
@@ -96,6 +96,9 @@
     left: 0;
     overflow: hidden;
 
+    // vertical alignment
+    transform: translateY(0.0625rem);
+
     white-space: nowrap;
     text-overflow: ellipsis;
 
